Uart_Read_Temp&Humi_With_DHT11_Update_v1.5

--- a/UART-CS/UART-CS.csproj
+++ b/UART-CS/UART-CS.csproj
@@ -210,6 +210,15 @@
   <ItemGroup>
     <None Include="Image\gif\tumblr_mjj8jmPs9h1s7wauso1_500.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Image\dongco\4285adcdc940ec1377a9bbf3e59f76ae.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Image\dongco\a.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Image\dongco\b.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
