--- a/software/UART-CS/UART-CS.csproj
+++ b/software/UART-CS/UART-CS.csproj
@@ -219,6 +219,12 @@
   <ItemGroup>
     <None Include="bin\Debug\Image\dongco\b.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Image\3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Image\4.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
